fixed scrollbar

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -540,3 +540,23 @@ svg {
     width: 50%;
     /* margin:10px */
 }
+
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: #121212;
+  }
+  
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #E5AB17;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #be8a06;
+  }
